--- a/src/app/pages/doctors-information/discharge-instruction/discharge-instruction.page.html
+++ b/src/app/pages/doctors-information/discharge-instruction/discharge-instruction.page.html
@@ -78,13 +78,27 @@
               Notice is saved in HIS.</ion-text
             >
           </ion-item>
-          <!--ng-container *ngIf="ds_status == 'F' || ds_status == 'A'">
-            <ion-button
+          <ion-row *ngIf="!isApprovedDI && !isUpdating">
+            <ion-col size="6"
+              ><ion-button expand="block" (click)="ApproveActionSheet()"
+                >Approve Discharge Ins</ion-button
+              ></ion-col
+            ><ion-col size="6">
+              <ion-button
+                color="warning"
+                expand="block"
+                (click)="returnForRevision123()"
+                >Return for Revision</ion-button
+              ></ion-col
+            >
+          </ion-row>
+          <ng-container *ngIf="ds_status == 'F' || ds_status == 'A'">
+            <!--ion-button
               expand="block"
               (click)="approveButton()"
               *ngIf="!isApprovedDI && !isUpdating"
               >Approve Discharge Instruction</ion-button
-            >
+          -->
             <ion-button
               color="warning"
               expand="block"
@@ -92,7 +106,12 @@
               *ngIf="isApprovedDI && !isUpdating"
               >Revoke Discharge Instruction</ion-button
             ></ng-container
-          -->
+          >
+          <ng-container>
+            <ion-item (click)="viewRevisionNoteHistory()"
+              >View Revision Note History</ion-item
+            >
+          </ng-container>
           <ion-button expand="block" *ngIf="isUpdating"
             ><ion-spinner></ion-spinner
           ></ion-button>
