--- a/src/app/pages/doctors-information/sign-medicalabstract/sign-medicalabstract.page.html
+++ b/src/app/pages/doctors-information/sign-medicalabstract/sign-medicalabstract.page.html
@@ -78,14 +78,23 @@
               Notice is saved in HIS.</ion-text
             >
           </ion-item>
-          <!--ion-grid>
+          <ion-grid>
+            <ion-row *ngIf="ma_status == 'F' && !isSaving">
+              <ion-col size="6"
+                ><ion-button expand="block" (click)="approveMedicalAbstract()"
+                  >Approve Med. Abs.</ion-button
+                ></ion-col
+              ><ion-col size="6">
+                <ion-button
+                  color="warning"
+                  expand="block"
+                  (click)="returnForRevision()"
+                  >Return for Revision</ion-button
+                ></ion-col
+              >
+            </ion-row>
             <ion-row>
               <ion-col size-md="6" offset-md="3" *ngIf="!isMaStatusSearching"
-                ><ion-button
-                  expand="block"
-                  *ngIf="ma_status == 'F' && !isSaving"
-                  (click)="approveMedicalAbstract()"
-                  >Approve</ion-button
                 ><ion-button
                   expand="block"
                   color="warning"
@@ -104,7 +113,12 @@
                 >
               </ion-col>
             </ion-row>
-          </ion-grid-->
+            <ng-container>
+              <ion-item (click)="viewRevisionNoteHistory()"
+                >View Revision Note History</ion-item
+              >
+            </ng-container>
+          </ion-grid>
           <ion-button
             id="trigger-button-certificate-signmedabs"
             style="display: none"
@@ -414,3 +428,44 @@
     </ng-template>
   </ion-modal>
 </ion-content>
+
+<!--ion-button #modals id="trigger-for-return-for-revision-MA" expand="block"
+  >Open</ion-button
+>
+<ion-modal
+  #modals
+  trigger="trigger-for-return-for-revision-MA"
+  (willDismiss)="onWillDismiss($event)">
+  <ng-template>
+    <ion-header>
+      <ion-toolbar>
+        <ion-buttons slot="start">
+          <ion-button (click)="cancel()"
+            ><ion-text style="color: white !important"
+              >Cancel</ion-text
+            ></ion-button
+          >
+        </ion-buttons>
+        <ion-title>Return for Revision</ion-title>
+        <ion-buttons slot="end">
+          <ion-button (click)="modal.dismiss()" [strong]="true"
+            ><ion-text style="color: white !important"
+              >Confirm</ion-text
+            ></ion-button
+          >
+        </ion-buttons>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content class="ion-padding">
+      <ion-item>
+        <ion-label position="stacked">Enter your Revision Details</ion-label>
+        <ion-textarea
+          [(ngModel)]="msg"
+          autoGrow="true"
+          class="custom-font"
+          placeholder="Type here"
+          id="s"></ion-textarea>
+      </ion-item>
+    </ion-content>
+  </ng-template>
+</ion-modal-->
