add er patient tab in desktop nav

--- a/src/app/chh-web-components/chh-app-desktop-navigation/chh-app-desktop-navigation.component.html
+++ b/src/app/chh-web-components/chh-app-desktop-navigation/chh-app-desktop-navigation.component.html
@@ -14,6 +14,10 @@
             routerLinkActive="active-link" class="link">
             {{this.constants.MENU__VALUE__IN_PATIENTS}}
           </ion-button>
+          <ion-button id="button-in-patients" fill="clear" routerLink="/menu/er-patients" routerDirection="root"
+            routerLinkActive="active-link" class="link">
+            {{this.constants.MENU__VALUE__ER_PATIENTS}}
+          </ion-button>
           <ion-button id="button-appointments" fill="clear" routerLink="/menu/news-feed" routerDirection="root"
             routerLinkActive="active-link" class="link">
             News Feed
