--- a/src/app/tab-notification/tab-notification.page.html
+++ b/src/app/tab-notification/tab-notification.page.html
@@ -477,7 +477,7 @@
                       <ion-text style="font-size: 18px; font-weight: 700;">
                         <span>{{ n.messageType }}</span>
                       </ion-text>
-                      <span [class]="selectedAccordion === n._id ? 'short-msg' : ''" style="font-size: 14px; font-weight: 700;">
+                      <span style="font-size: 14px; font-weight: 700;" [class]="selectedAccordion === n._id ? 'short-msg' : ''">
                         <br>
                         {{ n.message }}
                       </span>
