fix and update PF bugs

--- a/src/app/pages/er-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
+++ b/src/app/pages/er-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
@@ -252,7 +252,7 @@ ___  ___        _      _  _              _   _                   _
     <ion-content *ngIf="isDesktop">
       <ul class="breadcrumb">
         <li>
-          <a routerLink="{{routerLinkBack}}">In-Patients</a>
+          <a routerLink="{{routerLinkBack}}">Er-Patients</a>
           <ion-icon name="chevron-forward-outline" class="icon-center"></ion-icon>
         </li>
         <li>
