--- a/src/app/pages/er-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
+++ b/src/app/pages/er-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
@@ -308,7 +308,7 @@ ______          _    _
 <ion-content *ngIf="isDesktop">
   <ul class="breadcrumb">
     <li>
-      <a routerLink="{{routerLinkBack}}">In-Patients</a>
+      <a routerLink="{{routerLinkBack}}">Er-Patients</a>
       <ion-icon name="chevron-forward-outline" class="icon-center"></ion-icon>
     </li>
     <li>
